--- a/CuaHangTheThao/Views/Home/MenuCap2.cshtml
+++ b/CuaHangTheThao/Views/Home/MenuCap2.cshtml
@@ -3,5 +3,5 @@
 
 @foreach (var l in Model)
 {
-    <a class="dropdown-item" href="#">@l.ten</a>
+    <a class="nav-link" href="@Url.Action("trangchu", "Home", new { danhMucId = l.danh_muc_id })">@l.ten</a>
 }
